add revision and 2 new page unsub and update

--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
         </div>
 
         <div class="button-group">
-          <button type="submit" class="btn btn-primary">
-            <h5>Update My Email Preferences</h5>
+          <button type="submit" class="btn btn-primary" id="updatePreferences">
+            <h5>Update my email preferences</h5>
           </button>
-          <button type="button" class="btn btn-secondary">
+          <button type="button" class="btn btn-secondary" id="stayUnsubscribed">
             <h5>Stay unsubscribed</h5>
           </button>
-          <!-- Use type="button" if it doesn't submit the form, or change to an <a> link if needed -->
         </div>
       </form>
 
@@ -96,7 +95,7 @@
         You can change your preferences at any time. Need help?
         <a
           class="contact-url"
-          href="https://seniorsdiscountclub.com.au/misc/contact"
+          href="https://www.yourlifechoices.com.au/contact-us/"
           target="_blank"
           rel="noopener noreferrer"
           >Send us a message</a
